<resources>
    <string name="app_name">Techapalooza 2016</string>

    <string name="view_nav_open">Open</string>
    <string name="view_nav_close">Close</string>
    <string name="tickets_tv_login_info">Log in to purchase\nor view your tickets.</string>
    <string name="tickets_tv_logged_info">Your tickets will appear here.</string>
    <string name="tickets_tv_account_question">Don\'t have an account?</string>
    <string name="tickets_btn_signup_lable">Sign up</string>
    <string name="tickets_btn_signIn_lable">Sign in</string>
    <string name="tickets_btn_purchase_lable">Purchase tickets</string>
    <string name="tickets_redeem_coupon">Redeem coupon</string>
    <string name="six_pm_icon_tag">Six pm</string>
    <string name="seven_pm_icon_tag">Seven pm</string>
    <string name="tv_bands_at_7_text">Bands at 7</string>
    <string name="tv_00_text">00</string>
    <string name="tv_pm_bands_text">pm</string>
    <string name="tv_open_pm_text">pm</string>
    <string name="tv_00_open_text">00</string>
    <string name="tv_open_at_6_text">Open at 6</string>
    <string name="tv_marker_lable">Fort Garry Hotel</string>
    <string name="marker_descr_tag">marker_description_tag</string>
    <string name="tv_broadway_text">222 Broadway</string>
    <string name="tv_winnipeg_text">Winnipeg</string>
    <string name="tv_MB_R3C_0R3_text">MB R3C 0R3</string>
    <string name="tab_lable_news_feed">News Feed</string>
    <string name="tab_lable_schedule">Schedule</string>
    <string name="tab_lable_tickets">Tickets</string>
    <string name="tab_lable_line_up">Line-up</string>
    <string name="tab_lable_venue">Venue</string>
    <string name="dummy_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="dummy_date">March 5, 2015</string>
    <string name="dummy_image">dummy_image</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada, libero sodales malesuada scelerisque, purus elit luctus orci, sed consequat erat nisi efficitur purus. Sed pretium semper magna. Sed ac est non turpis condimentum scelerisque. Duis tincidunt lectus ut augue laoreet porttitor ut quis nisi. Maecenas vestibulum velit non elit rhoncus, at rutrum quam tincidunt. Suspendisse potenti. Nam egestas lacus in porttitor sagittis. Proin cursus pulvinar libero, vitae elementum urna eleifend consectetur. Donec pharetra nisl sem, sed ornare arcu faucibus id. Nullam ac est auctor, imperdiet tellus in, congue felis. In efficitur molestie ex, ut tempor ipsum viverra et.</string>
    <string name="line_up_image_view_descr">Band logo</string>
    <string name="alert">Alert</string>


</resources>
