<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tickets_outline_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tickets_tv_logged_info"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/tickets_main_text_size"
        android:layout_marginTop="18dp"
        fontPath="fonts/PT_Sans-Narrow-Web-Regular.ttf"/>

    <Button
        android:id="@+id/btn_tickets_sign_in"
        android:text="@string/tickets_btn_purchase_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_btn_style"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:textAllCaps="false"
        android:textSize="@dimen/tickets_btn_text_size"
        fontPath="fonts/Roboto-Light.ttf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tickets_redeem_coupon"
        android:textSize="@dimen/tickets_main_text_size"
        android:textColor="@color/textColorActive"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:textStyle="bold"
        fontPath="fonts/PT_Sans-Narrow-Web-Regular.ttf"
        android:layout_marginBottom="24dp"
        android:gravity="bottom" />


</LinearLayout>